--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <div class="main">
         <!-- <div class="img">
-            <img src="assets/photos/back1.jpg" alt="">
+            <img src="https://assets/photos/back1.jpg" alt="">
         </div> -->
         <nav>
-            <span><img  src="assets/svg/logo.svg" alt=""></span>
+<!--             <img src="https://example.com/images/myimage.jpg" alt="My Image"> -->
+
+            <span><img  src="https://assets/svg/logo.svg" alt=""></span>
             <div class="flex">
                 <select name="lang" id="">
                     <option value="English">English</option>
@@ -44,20 +46,20 @@
                 <div>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</div>
             </div>
                 <div class="side">
-                    <video src="assets/videos/v1.m4v" autoplay loop muted ></video>
-                    <img src="assets/photos/tv.png" alt="">
+                    <video src="https://assets/videos/v1.m4v" autoplay loop muted ></video>
+                    <img src="https://assets/photos/tv.png" alt="">
                 </div>
         </div>
         <div class="sepration"></div>
         <div class="second nd">
             <div class="side">
-                <img src="assets/photos/mobile2.jpg" alt="">
-                <div class="strange"><img src="assets/photos/boxshot2.png" alt="">
+                <img src="https://assets/photos/mobile2.jpg" alt="">
+                <div class="strange"><img src="https://assets/photos/boxshot2.png" alt="">
                     <div class="text">
                      <div class="text">Stranger Things</div>
                      <div class="text"> Downloading...</div>
                     </div>
-                    <img src="assets/photos/download-icon2.gif" alt="">
+                    <img src="https://assets/photos/download-icon2.gif" alt="">
                 </div>
             </div>
             <div class="one">
@@ -72,14 +74,14 @@
                 <div>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</div>
             </div>
                 <div class="side side2">
-                    <video src="assets/videos/v3.m4v" autoplay loop muted></video>
-                    <img src="assets/photos/device3.png" alt="">
+                    <video src="https://assets/videos/v3.m4v" autoplay loop muted></video>
+                    <img src="https://assets/photos/device3.png" alt="">
                 </div>
         </div>
         <div class="sepration"></div>
         <div class="second nd">
             <div class="side">
-                <img src="assets/photos/p4.png" alt="">
+                <img src="https://assets/photos/p4.png" alt="">
             </div>
             <div class="one one2">
                 <div>Create profiles for kids</div>
@@ -89,12 +91,12 @@
         <div class="sepration"></div>
         <div class="faq">
             <div class="h1">Frequently Asked Questions</div>
-            <div class="faqbox"> <span>What is Netflix? </span><img src="assets/svg/plus.svg" alt=""></span> </div> 
-            <div class="faqbox"><span>How much does Netflix cost?</span> <img src="assets/svg/plus.svg" alt=""></div>
-            <div class="faqbox"><span>Where can I watch?</span> <img src="assets/svg/plus.svg" alt=""></div>
-            <div class="faqbox"><span>How do I cancel?</span> <img src="assets/svg/plus.svg" alt=""></div>
-            <div class="faqbox"><span>What can I watch on Netflix?</span> <img src="assets/svg/plus.svg" alt=""></div>
-            <div class="faqbox"><span>Is Netflix good for kids?</span> <img src="assets/svg/plus.svg" alt=""></div>
+            <div class="faqbox"> <span>What is Netflix? </span><img src="https://assets/svg/plus.svg" alt=""></span> </div> 
+            <div class="faqbox"><span>How much does Netflix cost?</span> <img src="https://assets/svg/plus.svg" alt=""></div>
+            <div class="faqbox"><span>Where can I watch?</span> <img src="https://assets/svg/plus.svg" alt=""></div>
+            <div class="faqbox"><span>How do I cancel?</span> <img src="https://assets/svg/plus.svg" alt=""></div>
+            <div class="faqbox"><span>What can I watch on Netflix?</span> <img src="https://assets/svg/plus.svg" alt=""></div>
+            <div class="faqbox"><span>Is Netflix good for kids?</span> <img src="https://assets/svg/plus.svg" alt=""></div>
 
         </div>
         <div class=" lang2">
